# uz

./: Cargo.toml  LICENSE
crates/utils/: Cargo.toml
crates/utils-macros/: Cargo.toml
crates/utils-macros/src/: const_hash_utils.rs  lib.rs
crates/utils/src/: lib.rs  reflect.rs
crates/uz-core/: Cargo.toml
crates/uz-core/src/: lib.rs
crates/uz-core/src/application/: mod.rs
crates/uz-core/src/application/database/: mod.rs
crates/uz-core/src/application/executor/: mod.rs
crates/uz-core/src/engine/: mod.rs
crates/uz-core/src/engine/database/: mod.rs
crates/uz-core/src/engine/execution_process/: mod.rs
crates/uz-core/src/engine/executor/: mod.rs
crates/uz-core/src/engine/static_variables/: mod.rs
crates/uz-core/src/framework/: mod.rs
crates/uz-core/src/framework/application/: mod.rs
crates/uz-core/src/law/: mod.rs
crates/uz-core/src/law/argument/: mod.rs  species_dominated.rs
crates/uz-core/src/law/parameter/: mod.rs  species_dominated.rs
crates/uz-core/src/species/: attribute.rs  mod.rs
crates/uz-macros/: Cargo.toml
crates/uz-macros/src/: lib.rs
examples/: ball.uz  hello_world.rs
src/: core.rs  lib.rs  prelude.rs  utils.rs
