[package]
name = "uz"
version = "0.0.0"
edition = { workspace = true }

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
uz-core = { path = "crates/uz-core" }
uz-macros = { path = "crates/uz-macros" }
utils = { path = "crates/utils" }

[dev-dependencies]

[dependencies]
uz-core = { workspace = true }
uz-macros = { workspace = true }
utils = { workspace = true }
